Clean up some Android Lint warnings.